tests/gold/errors/wrong_main_type.comp
[[1;31mERROR[0m]: src/errors/wrong_main_type.3(1:0): invalid return type for main.
Compilation failed!
